@@ -27,25 +27,21 @@ has skiptest => (
 sub gather_files {
   my ( $self, ) = @_;
 
-  my $skiptests = q{eval "use Test::Kwalitee";};
+  my $import_options = '';
 
   if ( @{ $self->skiptest } > 0 ) {
-
     my $skip = join ' ', map { "-$_" } @{ $self->skiptest };
-
-    $skiptests = qq[eval {
-  require Test::Kwalitee;
-  Test::Kwalitee->import( tests => [ qw( $skip ) ]);
-};];
-
+    $import_options = qq{ tests => [ qw( $skip ) ]};
   }
+
   require Dist::Zilla::File::InMemory;
 
   for my $filename ( qw( xt/release/kwalitee.t ) ) {
     my $content = $self->fill_in_string(
       ${$self->section_data($filename)},
-      { skiptests => \$skiptests },
+      { import_options => \$import_options},
     );
+
     $self->add_file(
       Dist::Zilla::File::InMemory->new( {
         'name'    => $filename,
@@ -93,7 +89,4 @@ ___[ xt/release/kwalitee.t ]___
 # This test is generated by Dist::Zilla::Plugin::Test::Kwalitee
 use strict;
 use warnings;
-use Test::More;   # needed to provide plan.
-{{ $skiptests }}
-
-plan skip_all => "Test::Kwalitee required for testing kwalitee" if $@;
+use Test::Kwalitee{{ $import_options }};
