@@ -4,6 +4,8 @@ Revision history for Perl extension {{$dist->name}}
     - removed old and deprecated Dist::Zilla::Plugin::KwaliteeTests, which is
       no longer indexed by PAUSE anyway
     - fixed tests broken on win32
+    - Test::Kwalitee is now required to be present when the test is run (by
+      authors, at release time)
 
 2.05      2013-08-11 14:18:58 America/Vancouver
     - adjust tests to handle recent changes to Test::Kwalitee and
